trunk/Archive2/a8/bf4e294a5192af/output
main.cpp: In constructor 'foo::foo()':
main.cpp:14:11: error: cannot convert 'foo::foo()::<lambda(int*, void*)>' to 'fp {aka void (*)(int*, void*)}' in assignment
         f = [this](int * x, void * v)
           ^
